--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "target"              : "ES2017",
       "module"              : "commonjs",
-      "rootDir"             : "src",
+      "rootDir"             : "project",
       "outDir"              : "dist",
       "sourceMap"           : true,
       "extendedDiagnostics" : true
@@ -10,7 +10,7 @@
 
     "include": [
         "src/**/*"
-, "project/Hardware", "project/main.ts"    ],
+, "project/Hardware", "project/Hardware/main.ts", "project/Hardware/Hardware.ts", "project/Hardware/Cpu.ts", "project/Hardware/System.ts"    ],
     "exclude": [
       "./node_modules"
     ]
