--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir"             : "src",
     "outDir"              : "dist",
     "sourceMap"           : true,
-    "extendedDiagnostics" : true
+    "extendedDiagnostics" : true,
+    "types"               : ["node"]
   },
 
   "include": [
