--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^13.1.6"
   },
   "scripts": {
-    "start": "node ./dist/System.js",
+    "start": "node ./dist/Hardware/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
